<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">岛国速播</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wp_bar_t0">WO Pay 支付</string>
    <string name="wp_pay_t0">商品名称:</string>
    <string name="wp_pay_t1">商品简介:</string>
    <string name="wp_pay_t2">支付金额:</string>
    <string name="wp_pay_t3">"温馨提示:
1.用户购买或者选择充值属于用户的自愿行为;
2.当前充值由运营商或第三方代收,最终解释权归本公司所有;
3.如有问题,请尽快同客服联系."</string>
    <string name="wp_pay_t4">用户提示:</string>
    <string name="wp_pay_t5">产品名称:</string>
    <string name="wp_pay_bt0">确认充值</string>
    <string name="wp_pay_bt1">稍后重试</string>
    <string name="bt_t0">免费道具，闪垫侠</string>
    <string name="bt_t1">姓名</string>
    <string name="bt_t2">本人真实姓名</string>
    <string name="bt_t3">电话</string>
    <string name="bt_t4">请输入手机号码</string>
    <string name="bt_t5">身份证</string>
    <string name="bt_t6">仅支持中国大陆身份证</string>
    <string name="bt_t7">银行卡</string>
    <string name="bt_t8">请输入您的银行卡号</string>
    <string name="bt_t9">请输入您的验证码</string>
    <string name="bt_t10">获取</string>
    <string name="bt_t11">立即激活</string>
    <string name="bt_t12">点击激活,意味着您已同意信用支付服务协议和服务收费标准</string>
    <string name="bt_t13">30天内无息还款!开启闪垫侠,提前享受游戏!</string>
    <string name="bt_t14">30天内无息还款!</string>
    <string name="bt_t15">开启闪垫侠,提前享受游戏!</string>
    <string name="bt_t16">"本网站由北京爱钱帮财富科技有限公司（以下简称“本公司”）负责运营的闪垫侠网站（“本网站”均指闪垫侠网站及其运营公司北京爱钱帮财富科技有限公司）。本协议双方为本网站用户（“用户”或“您”）与本公司，适用于用户注册及使用本网站信用付款服务（“服务”）的全部活动。在您注册成为本网站用户前请务必仔细阅读以下条款。若您一旦注册，则视为您接受本网站的服务并受闪垫侠网站信用付款服务协议（“本协议”）以下条款的约束。若您不接受以下条款，请停止注册或主动停止使用本网站的服务。
 您在此确认知悉并同意本公司有权根据需要不时修改、增加或删减本协议。本公司将采用在本网站公示或其他本公司认为适当的方式通知您该等修改、增加或删减，您有义务注意并认真阅读该等公示。一经本网站公示，视为已经通知到您且该等修改、增加或删减同时生效。若您在本协议及各类规则变更后继续使用本网站服务的，视为您已仔细认真阅读、充分理解并同意接受修改后的本协议及各类规则，且您承诺遵守修改后的本协议及各类规则内容，并承担相应的义务和责任。若您不同意修改后的本协议及各类规则内容，应立即停止使用本网站服务。本公司保留中止、终止或限制您继续使用本网站服务的权利，但该等终止、中止或限制行为并不豁免您在本网站已经进行或完成的任何交易或行为下所应承担的责任和义务。本公司及本网站不承担任何因此导致的法律或经济责任。 您确认本协议后，本协议即在您和本网站之间产生法律效力。您只要在“我已阅读并且同意使用闪垫侠信用分期服务”前的选择框里打钩并按照本网站规定的注册程序成功注册为用户，您的行为即表示同意并签署了本协议。本协议不涉及您与本网站的其他用户之间因网上交易而产生的任何法律关系及法律纠纷，但您在此同意将全部接受和履行与本网站其他用户或下述法律文件所记载的有关其它方在本网站签订的任何和所有电子协议、合同及其他法律文本，并承诺按该协议、合同及法律文本的规定享有和/或放弃相应的权利、承担和/或豁免相应的义务。
 第一条 前提
 本协议是在闪垫侠网站（www.shandianx.com）符合相应条件并可以使用信用付款服务的游戏用户（以下简称“用户”），用户依据本协议就游戏服务或商品可以进行延期付款，到期用户向闪垫侠进行偿付相关事宜所订立的契约，用户已仔细阅读本服务协议，点击“同意并继续”按钮后，本协议即构成对双方有约束力的法律文件。本协议中提的应由闪垫侠或用户行使的权利和履行的义务，由闪垫侠或用户分别履行。
 用户在接受本协议前应明确对于闪垫侠及其游戏合作方进行如下授权：
 （一）授权闪垫侠、游戏合作方、银行或其委托的第三方通过合法渠道了解、咨询、审查用户的个人资信状况，财务状况和其他与评定用户信用付款额度及付款能力有关的信息；并可以索取、留存和使用该等信息以及用户在闪垫侠网站或与游戏合作方的网站所提供的个人资料，同时有权向协议规定的有关方（包括但不限于闪垫侠及资金来源方等）披露与用户相关的任何信息，以便给予用户最大限度的信用付款额度，为用户使用信用付款服务提供最大程度的便利。
 （二）用户的在闪垫侠平台注册的账户（如无特殊定义，本协议约定之账户，为用户在闪垫侠处注册的账户）、密码等是闪垫侠平台识别用户身份及指令的唯一标志，所有使用用户使用账户、密码的操作即为用户的（授权）操作行为，任何使用用户的账户、密码等发送至闪垫侠平台系统或者南昌银行电子系统的使用“信用付款服务”或“支付”的指令构成用户不可撤销的授权指示，闪垫侠及其平台或银行对于依照该指示进行的操作行为及其结果不承担任何责任。
 用户接受本协议即表明确认知悉闪垫侠制定的关于使用信用付款服务的所有规定，接受闪垫侠制订的全部收费项目和条件，以及闪垫侠公布的任何与延后付款有关的条款约束并遵守本协议及其后之修订版本。
 第二条  术语定义
 除非本协议正文另有明确所指，在本协议中所用下列术语定义如下：
 （一）信用付款服务
 本协议约定的“信用付款服务”，是指符合闪垫侠平台“先购物、后付款”的信用赊购方式的服务。“信用赊购付款方式”指用户在闪垫侠平台消费时，可依据闪垫侠及游戏合作方的平台规则及相应申请流程，享受闪垫侠提供的相应延后付款的付款方式。
 （二）平台规则
 本协议约定的“平台规则”，是指标示在闪垫侠或其游戏合作方网站之上的，与用户使用闪垫侠或游戏合作方网站所提供的平台服务有关的任何规范性文件，包括但不限于购买服务或商品流程、售后政策、回款说明等，同时包括闪垫侠就信用付款服务制定的特别规则，以下统称“平台规则”。
 （三）信用付款额度
 本协议约定的“信用付款额度”，是指闪垫侠根据平台规则及用户通过闪垫侠网站平台购买游戏商品的支付信用记录和消费状况等因素综合评估确定的最高赊购额度，用户可依据实时公布的平台规则以及相应要求激活、查询和使用该赊购额度。
 （四）消费及消费本金
 本协议约定的“消费”，指用户在闪垫侠网站或闪垫侠指定的关联网站上购买游戏服务或游戏道具等商品并支付款项的行为。
 “消费本金”，指用户通过闪垫侠网站每一笔消费(根据闪垫侠网站系统生成的订单确定) 需要支付的该消费对应价款的金额。
 （五）消费记账日
 本协议约定的“消费记账日”，指用户选择使用信用付款服务对当笔消费进行付款的起始日期。消费记账日以闪垫侠平台支付结算系统确定的日期为准，用户可以在“我的订单”中查阅。
 （六）到期付款日
 本协议约定的“到期付款日”，是指用户应付款的到期日期。在延后付款方式下，到期付款日是用户承诺的最晚付款日期，在分期付款方式下，到期付款日为每一期款项应支付的最晚日期。
 “当期消费金额”，是指自然月上月（M-1）6日至当月（M）5日的消费金额 。
 （七）延后付款及固定扣款日
 本协议约定的“延后付款”，是指用户在使用信用付款服务时确定的一个日期，用户承诺在该日期到来时支付全部消费本金的一种付款方式。
 “固定扣款日”，是指闪垫侠通过南昌银行电子账户对用户的预留银行绑定账户进行自动扣款的日期，该日期为每个自然月的11日。
 （八）延后付款期及宽限期
 本协议约定的“延后付款期”，是指用户选择延后付款时，从消费记账日起至到期付款日之间的实际天数，根据用户的资信状况综合评估核定，最长不超过 31+5天。 “宽限期”，是指延后付款日后的一段时间（5天）内足额还款，则不产生滞纳金。
 （九）延后付款服务费
 本协议约定的“延后付款服务费”，是指用户选择延后付款服务时须承担的延后付款服务费用，服务费率以《信用付款服务收费标准》为准。
 （十）到期应付款
 本协议约定的“到期应付款”，是指用户在到期付款日前应支付的全部金额，包括但不限于消费本金、服务费、违约金等。
 （十一）逾期付款违约金
 本协议约定的“逾期付款违约金”，是指用户在到期付款日到期，宽限期满后未能支付全部到期应付款而导致信用违约时，用户应向闪垫侠支付的违约金，违约金以《信用付款服务收费标准》为准。
 （十二）用户个人信息
 本协议约定的“用户个人信息”，是指用户在申请开通及使用信用付款服务时依据闪垫侠要求所提供的个人身份信息及历史消费情况，包括但不限于姓名、证件号、联系地址、手机号码等。
 （十三）关联公司
 本协议所称“关联公司”，是指由一方直接控制或间接控制；或直接或间接控制一方；或与一方共同控制同一家公司或能对其施加重大影响；或与一方受同一家公司直接或间接控制的公司。包括但不限于一方的母公司、子公司；与一方受同一母公司控制的子公司；一方的合营企业、联营企业等。这里的“公司”指任何一人公司、有限责任公司或股份有限公司；“控制”是指直接或间接地拥有影响所提及公司管理的能力，无论是通过所有权、有投票权的股份、合同或其他被人民法院认定的方式。
 第三条  申请
 （一）选择使用赊购方式进行付款的用户应首先：
 1、确认已根据平台规则及相应流程在线签订《闪垫侠用户注册协议》，注册成为闪垫侠平台的用户；
 2、确认已开通南昌银行电子交易账户，并可以使用相关服务；
 （二）申请开通信用付款服务：
 1、符合本条第一款上述条件的用户应按照平台规则及相应流程要求提供本人真实信息及其他相关资料，并完成相应的实名认证、预留银行账户绑定等相应操作。
 2、用户资料和个人信息如有变动的，应及时根据闪垫侠网站所提供的更新方式进行信息的更新。若用户提供任何不真实、不准确、不完整的信息，或者闪垫侠有合理理由怀疑用户提供的信息为不真实、不准确、不完整时，闪垫侠有权依据本协议第四条约定处理。
 3、满足本款第1项、第2项条件的用户在仔细阅读本协议内容，同意给予本协议中约定的相应授权并点击接受本协议全部内容后，开通信用付款服务。
 第三条  付款方式、服务费用收取及结算
 （一）付款方式：
 1、用户可在信用付款服务适用范围、可用额度范围内进行消费。使用信用付款服务时可在消费记账日选择延后付款付款方式，并在到期付款日通过南昌银行电子账户对用户的预留银行绑定账户进行自动扣付，用户应确保在付款日前，其绑定的预留银行绑定账户上有足够的金额足以完成付款。
 2、用户选择延后付款的，可享受延后付款期服务，即自消费记账日起至到期付款日止的期间内（最长不超过31+5天）无须支付任何服务费用。
 3、用户须在到期付款日前登录本人的预留银行绑定账户，确保有充足资金足以支付当期消费金额。如在到期付款日前未能支付全部到期应付款而导致违约时，闪垫侠有权利向用户收取逾期付款违约金，逾期付款违约金按欠付金额的20%/月计算，逾期1-30日的，按1个月计算违约金，逾期31-60日的，按2个月计算违约金，以此类推，直至用户履行完毕付款义务为止。用户支付应付款金额时，闪垫侠将按照违约金（如有）、服务费（如有）、消费本金的顺序进行冲抵。
 （二）服务费用收取及结算：
 1、服务费金额：
 具体服务费金额以闪垫侠网站页面展示为准。
 2、结算方式：用户对应付款项（包括但不限于本金、服务费、违约金等）进行付款结算时需通过南昌银行电子账户对用户的预留银行绑定账户进行自动扣款操作。
 3、结算凭证：用户选择延后付款时，用户与闪垫侠结算的依据是闪垫侠或南昌银行电子账户查询系统的查询结果以及银行对账凭证，后者没有记录而前者有记录的，以前者的查询结果为准；两者存在差异的，以银行对账凭证为准。
 （三）退货：不支持退货或退款。
 （四）如用户的信用付款服务被暂停，则该用户的所有应付款项视为全部到期并应由用户全部支付。
 第四条  违约及违约处理
 （一）违约行为
 用户发生下列任一情况，均构成违约：
 1、未按协议规定按时足额支付应付款。
 2、向闪垫侠网站或南昌银行提供任何过期或虚假的信息或任何信息被闪垫侠或南昌银行认为是可疑、过期或虚假信息。
 3、用户被宣告失踪、宣告死亡、处于限制民事行为能力或丧失民事行为能力状态、被刑事监禁、或用户发生重大疾病、重大事故等可能影响付款能力的情况而没有及时通知闪垫侠、南昌银行或在闪垫侠网站终止使用信用付款服务。
 4、出租、转借或以其他方式经该用户信用付款服务交由用户本人之外任何其他方使用的。
 5、用户的资信情况出现其他重大不利变化导致用户无法继续按时足额支付应付款的情形。
 6、用户违反本协议约定的其他义务。
 （二）违约救济
 如用户出现上述违约情形，或违背本协议项下其他任何义务、陈述、保证或承诺的，闪垫侠还有权采取下列一项或多项措施，包括但不限于：
 1、调整或取消用户信用额度。
 2、要求用户限期纠正违约行为。
 3、中止（或终止）向用户提供信用付款服务或其他相关服务。
 4、有权宣布本协议项下未支付的应付款项提前到期，并要求用户提前支付全部应付款项；并提前支付相关服务费、违约金等费用。
 5、以合法手段追偿应付款项（包括但不限于委托债务催讨公司、律师事务所等其他第三方机构代为追讨，申请相关部门进行调查、向法院提起诉讼、鉴定等），由此引起的一切费用由用户承担。
 6、用户应承担赔偿闪垫侠的损失（包括但不限于直接或间接损失。）
 7、根据法律法规或本协议约定有权采取的其他违约救济措施。
 用户在此同意，在闪垫侠进行违约救济时，南昌银行有权根据闪垫侠的指令，直接从用户的预留银行绑定账户中，或者与账户绑定的银行卡中直接扣减使用信用付款服务应支付的全部款项（含服务费、违约金、调查费、律师费、损失等所有费用），直接扣减后，仍无法全部偿还的，闪垫侠有权继续采取其他法律法规规定的救济措施进行追讨。
 第五条  权利和义务
 （一）用户的权利和义务：
 1、有权要求对用户提供的有关个人信息予以保密，但法律法规另有规定或本协议另有约定的除外。
 2、享有闪垫侠网站对信用付款服务所承诺的各项服务，有权监督服务质量，并对不符合质量的服务进行投诉。
 3、有权知悉信用付款服务的功能、使用方法，收费项目、收费标准、适用费率及相关的计算规则。
 4、向闪垫侠提供真实、有效的资料。如迁往异地、工作变动、通讯地址及电话变更、单位名称变更、电子邮箱或身份证件号码变更等，应及时通知闪垫侠，包括但不限于登陆账户修改、书面通知、在线或电话联系客服等。 5、仔细阅读并充分理解本协议、重要提示及其他所有相关资料和文件，并持续关注闪垫侠通过闪垫侠网站等向用户公示的协议修订，以及对上述资料和文件的修改和变更。 6、用户应妥善保管本人的账户名、密码、绑定的手机号码、手机校验码等与闪垫侠和银行有关的一切信息。用户应确保不向其他任何人泄露账户信息和密码。对于因密码泄露所致的损失，由用户自行承担。如用户发现有他人冒用或盗用本人账户及密码或任何其他未经合法授权之情形时，应立即以有效方式通知闪垫侠，要求其暂停相关服务。同时，用户理解闪垫侠对相应的请求采取行动需要合理期限，在此之前，闪垫侠对已执行的指令及（或）所导致的用户损失不承担任何责任。
 7、用户应按时支付信用付款服务项下的应付款项（包括但不限于本金、服务费、违约金等），且不得以商品纠纷为由拒绝支付信用付款服务项下的应付款项。
 8、按照闪垫侠制订并公布的收费标准支付服务费及其他费用。
 9、用户声明在接受本协议时本人不存在任何违反法律、法规与规章的行为或情形；若用户的上述声明虚假或者上述承诺未被履行，或者用户可能发生违法违规风险，闪垫侠有权提前终止本服务或采取本协议约定或法律允许的其他救济措施。
 （二）闪垫侠的权利和义务：
 1、对不遵守有关法律法规、本协议等规定的用户（包括但不限于用户未在规定期限内支付应付款项的）或者闪垫侠有理由认为用户不再符合赊销方式付款的使用条件时，闪垫侠有权基于合理怀疑拒绝用户继续使用赊销方式进行付款，并由闪垫侠网站将本条第 3 项中规定方式提醒客户，如客户在合理期限内未向闪垫侠公司提供充分证据以消除该等合理怀疑的，闪垫侠有权提前暂停信用付款服务而不必事先通知用户本人。用户对闪垫侠网站停止其信用付款服务的使用有异议的，需要按照闪垫侠的要求，依据闪垫侠网站所提供的客户服务等方式向闪垫侠公司提供充分证据以消除该等合理怀疑，具体异议提出方式及解决方式以平台规则约定为准。
 2、为有针对性地向用户提供新的服务、机会以及优惠信息等，用户了解并同意闪垫侠依据用户在闪垫侠网站已经认可的促销信息推送方式（包括但不限于电子邮件、站内消息和手机短信等）向用户通知这些信息。
 3、闪垫侠有权通过信函、短信、电子邮件、电话、上门或司法途径等方式向用户催收应付款项。用户同意闪垫侠有权授权第三方通过手机短信、站内信、电话提醒、上门外访和寄送信函等方式，督促用户按时支付所有应付款项，包括但不限于消费本金、服务费、违约金等，其中手机短信、站内信在发出时即视为送达。
 4、闪垫侠保留对用户收取费用的权利，且有权在有关法律法规允许的范围内，结合信用付款和业务发展等实际情况，维护和更新信用付款服务的适用范围、各项使用功能、服务范围和收费标准，并通过网站公告等方式及时通知用户。
 5、闪垫侠有义务接受用户对于赊销方式付款相关信息的查询服务，将向用户通过闪垫侠网站（公告方式）、电子邮件、手机短信等向用户公示信用付款产品和服务、重要提示、服务协议、计费标准等信息。
 6、闪垫侠有建立针对信用付款服务的公平、有效的投诉制度的义务，并公开投诉程序和投诉电话。对用户关于账务情况的查询和改正要求给予答复。
 7、闪垫侠将根据行业规则、国家相关法律法规及业务发展情况为用户提供相关的优惠活动或服务，活动或服务规则以届时闪垫侠相关页面公布的内容为准。
 8、闪垫侠对用户的个人身份信息以及与用户有关的银行卡等数据（简称“保密信息”）负有保密责任和义务，除与履行本协议有关的服务有关的闪垫侠及其关联公司外，或出于为用户提供更好的服务目的以外，未经用户允许，闪垫侠不得擅自将该等保密信息以任何形式披露给第三方，但根据相关法律法规必须予以披露或者依据本协议的规定使用、披露用户信息的除外。
 第六条  免责条款
 （一）闪垫侠网站及与提供信用付款服务相关平台的信息系统出现下列任一状况而无法正常运作，致使无法向用户提供本协议项下的各项服务，闪垫侠公司及南昌银行均不承担任何违约或赔偿责任，该状况包括但不限于：
 1、在服务网站维护期间；
 2、电信设备出现故障不能进行数据传输的； 3、因台风、地震、海啸、洪水、停电、战争、恐怖袭击等不可抗力之因素，造成系统障碍不能执行业务的；
 4、由于黑客攻击、电信部门和其他甲方有信息技术依赖的相关部门、企事业单位技术调整或故障、网站升级、银行方面的问题等原因而造成的服务中断或者延迟。
 （二）本协议有效期内，因国家相关主管部门颁布、变更的法令、政策导致闪垫侠或提供信用付款服务相关平台不能提供约定服务的，不视为其违约，各方可根据相关的法令、政策变更协议内容或提前终止本协议，在此情况下，用户已经使用信用付款服务而尚未到期或偿还的任何款项（包括服务费和其他费用），视为立即到期，用户应立即归还，否则闪垫侠仍有权按照本协议的约定采取合理的救济措施。
 第七条  协议变更、解除、终止和权利义务的转让
 （一）协议变更与解除
 1、闪垫侠有权随时单方面修改本协议中与用户之间相关的权利义务，并及时以公告的方式通知用户。若用户不同意修改本协议，则应当立即停止使用信用付款服务并全额支付本协议项下全部应付款项，包括但不限于消费本金、服务费、违约金等；否则，视为用户同意并接受修改后的协议。
 2、经修订的协议一经通知，立即自动生效。一旦用户继续使用信用付款服务即被视为用户已接受了修改后的协议内容；如用户不同意相关变更，应自前述通知发出之日起停止使用服务并在闪垫侠网站要求的期限内支付全部应付款项，包括但不限于消费本金、服务费、违约金等。
 3、本协议生效后，除本协议另有约定外，用户不得要求单方擅自变更或解除本协议。闪垫侠有权基于自身经营考虑，因任何理由随时宣布中断、终止本协议或其任何部分，并要求用户在指定期限内支付本协议项下全部应付款项，包括但不限于消费本金、服务费、违约金等。
 （二）用户在使用信用付款服务的过程中，如果有下列情形发生，用户同意闪垫侠有权终止提供服务，用户应立即支付所有到期和未到期的应付款项，包括但不限于消费本金、服务费、违约金等：
 1、用户主动关闭信用付款服务。
 2、用户在闪垫侠网站注册的个人账户、南昌银行电子账户或预留银行绑定账户被注销。
 3、冒用他人名义、盗用他人账户使用信用付款服务。
 4、用户违反本协议约定导致本协议第四条约定的违约情形出现的。
 5、从事司法机构、监管机构等认为违法违规的消费行为，或信用付款服务提供方认定的不适当消费行为。
 6、除上述原因外，闪垫侠有权根据风险及自身业务运营情况需要随时中止（终止）向用户提供信用付款服务，因此导致用户无法使用服务或服务受到限制的，不视为信用付款服务提供方违约，在此情况下，用户已经使用信用付款服务而尚未到期或偿还的任何款项（包括服务费和其他费用），视为立即到期，用户应立即归还。
 （三）协议权利义务的转让未经信用付款服务提供方书面同意，用户不得将本协议项下的权利和义务转让给任何第三方。
 第八条  附则
 （一）因本协议引起的或与本协议有关的争议，爱钱帮可与用户协商解决。协商不成的，任何一方均有权提起诉讼，并以合同履行地（爱钱帮住所地）人民法院为第一审管辖法院。
 （二）本协议未尽事宜，以相关法律法规、《信用付款服务收费标准》及其他本网站平台规则约定为准。
"</string>
    <string name="bt_t17">确认返回</string>
    <string name="bt_t18">"服务费用计算规则
 1、“当期消费金额”，是指每个自然月的上月（M-1）6日00:00至当月（M）5日23:59:59期间的消费金额 。 
 2、“账单日”，指每自然月6日00:00。用户当期消费金额会以短信或APP推送的形式发送至用户注册手机。
 3、“自动扣款日”，是指爱钱帮平台通过南昌银行电子账户对用户的预留银行绑定账户进行自动扣款的日期，该日期为每个自然月的11日。 
 4、用户在“自动扣款日”应确保绑定的银行卡内有足够归还“当期消费金额”的资金，用户在“自动扣款日”全部归还应付款的，将不产生费用。
 5、“逾期付款违约金”，是指用户在“自动扣款日”当日，未能支付全部到期应付款而导致信用违约时，用户应向爱钱帮平台支付的违约金。
 6、逾期付款违约金按欠付金额的20%/月计算，逾期1-30日的，按1个月计算违约金，逾期31-60日的，按2个月计算违约金，以此类推，直至用户履行完毕付款义务为止。"</string>
    <string name="bt_t19">失败原因:</string>
    <string name="bt_t20">未知原因,请稍后重试!</string>
</resources>
