<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/wp_c1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/wp_v_titlebar" />
    <LinearLayout android:orientation="vertical" android:background="@color/wp_c0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="8.0dip" android:minHeight="100.0dip">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/wp_pay_t4" style="@style/font_16_9A9A9A" />
            <TextView android:id="@id/wp_err_t0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" style="@style/font_16_FF7E2C" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/wp_c0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="8.0dip" android:layout_weight="1.0">
        <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/wp_err_but" android:background="@drawable/wp_bir" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/wp_pay_bt1" android:singleLine="true" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/wp_pay_t3" style="@style/font_14_9A9A9A" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/wp_c0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="50.0dip" android:layout_weight="0.0">
        <ImageView android:background="@drawable/wp_i_l0" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>